call-center/src/objects/Sirono_Call_Center_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for Sirono Call Center application.</description>
    <fields>
        <fullName>Auto_Create_Overdue_Cases__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When enabled, cases are automatically created for statements with overdue balances.</description>
        <inlineHelpText>When enabled, cases are automatically created for statements with overdue balances.</inlineHelpText>
        <label>Auto Create Overdue Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Create_Payment_Plan_Error_Cases__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When enabled, cases are automatically created for payment plans with errors.</description>
        <inlineHelpText>When enabled, cases are automatically created for payment plans with errors.</inlineHelpText>
        <label>Auto Create Payment Plan Error Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Create_Precollection_Cases__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When enabled, cases are automatically created for statements with delinquent balances.</description>
        <inlineHelpText>When enabled, cases are automatically created for statements with delinquent balances.</inlineHelpText>
        <label>Auto Create Precollection Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Number_Plan_Installments__c</fullName>
        <defaultValue>24</defaultValue>
        <label>Max Number Plan Installments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Installment_Amount__c</fullName>
        <defaultValue>25.00</defaultValue>
        <label>Min Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Number_Plan_Installments__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Min Number Plan Installments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sirono Call Center Settings</label>
</CustomObject>